--- a/src/main/resources/static/css/delivery/deliveryList.css
+++ b/src/main/resources/static/css/delivery/deliveryList.css
@@ -31,12 +31,17 @@ body {
 
 .header-delivery h1 {
     font-size: 26px;
-    color: #5a3b26;
+    color: #333;
     display: flex;
     gap: 10px;
     align-items: center;
     font-weight: bold;
     margin: 0;
+}
+
+#delivery-count {
+    font-size: 16px;
+    align-self: end;
 }
 
 /* 🔵 버튼 그룹 */
