--- a/src/main/resources/static/css/menu/commonAdmin.css
+++ b/src/main/resources/static/css/menu/commonAdmin.css
@@ -39,7 +39,7 @@ label {
     display: block;
     margin-bottom: 8px;
     font-weight: 600;
-    color: #4d2c14;
+    color: #333;
 }
 
 input[type="text"],
