--- a/src/main/resources/templates/menu/menuForCustomer.html
+++ b/src/main/resources/templates/menu/menuForCustomer.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/menu/menuForCustomer.js}"></script>
