--- a/src/main/resources/templates/store/customer-store-list.html
+++ b/src/main/resources/templates/store/customer-store-list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>가맹점 목록 | Sand-it</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/store/customerStoreList.js}"></script>
     <link rel="stylesheet" th:href="@{/css/store/customerStoreList.css}">
