--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -5,6 +5,7 @@
     <title>지점 상세</title>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
