--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -17,6 +17,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="storeDetail-container">
     <h2>지점 상세 정보</h2>
     <form id="storeDetailForm">
@@ -55,6 +56,7 @@
         </div>
     </form>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
