--- a/src/main/resources/templates/store/store-register.html
+++ b/src/main/resources/templates/store/store-register.html
@@ -19,6 +19,7 @@
 
 <body>
 
+<main>
 <div class="storeRegister-container">
     <h2 id="title">지점 입력</h2>
     <div>
@@ -62,7 +63,7 @@
 
     </div>
 </div>
-
+</main>
 
 <div th:replace="~{footer :: footer}"></div>
 </body>
