--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -5,6 +5,7 @@
     <title>채팅방 목록</title>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 <!--    <script th:src="@{/js/common.js}"></script>-->
