--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,9 +3,9 @@
     <div class="footer-content">
         <p>© 2025 Sand-it. All rights reserved.</p>
         <div class="footer-links">
-            <a href="/about" class="footer-link">회사소개</a>
-            <a href="/terms" class="footer-link">이용약관</a>
-            <a href="/privacy" class="footer-link">개인정보처리방침</a>
+            <p class="footer-link">회사소개</p>
+            <p class="footer-link">이용약관</p>
+            <p class="footer-link">개인정보처리방침</p>
         </div>
     </div>
 </footer>
