--- a/src/main/resources/templates/store/store-order-list.html
+++ b/src/main/resources/templates/store/store-order-list.html
@@ -25,6 +25,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
     <div class="header-store">
         <div>
@@ -78,10 +79,11 @@
         <option value="재고 부족">재고 부족</option>
     </select>
     <div style="margin-top: 15px; text-align:right;">
-        <button id="cancel-confirm-btn">확인</button>
-        <button id="cancel-cancel-btn">닫기</button>
+        <button id="cancel-confirm-btn" style="outline: none; border: none; font-weight: bold; padding: 10px 20px;">확인</button>
+        <button id="cancel-cancel-btn" style="outline: none; border: none; font-weight: bold; padding: 10px 20px;">닫기</button>
     </div>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
