address detail update

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -49,6 +49,8 @@
             <input type="text" id="mainAddress" placeholder="주소를 입력하세요">
             <button type="button" class="btn-primary" id="find-address-btn">주소 검색</button>
         </div>
+        <label for="mainAddressDetail" class="detailLabel">상세 주소</label>
+        <input type="text" id="mainAddressDetail" placeholder="상세 주소를 입력하세요">
         <input type="hidden" id="deliveryDestinationLat">
         <input type="hidden" id="deliveryDestinationLan">
     </div>
@@ -84,8 +86,8 @@
     <input type="hidden" id="storeLatitude">
     <input type="hidden" id="storeLongitude"><br/>
 
-    <p>예약은 현재시간 기준 1시간 이후부터 가능합니다.</p>
-    <label>예약 시간 (선택사항):
+    <p id ="reservationDetail">예약은 현재시간 기준 1시간 이후부터 가능합니다.</p>
+    <label class = "reservationLabel">예약 시간 (선택사항)
         <input type="text" id="reservationDate" name="reservationDate" placeholder="예약을 원하시면 입력해주세요.">
     </label><br/>
 </div>
