--- a/src/main/resources/static/css/order/order.css
+++ b/src/main/resources/static/css/order/order.css
@@ -54,7 +54,7 @@ h1 {
     display: block;
     margin-bottom: 8px;
     font-weight: 600;
-    color: #5a3b26;
+    color: #333;
 }
 
 .form-group input,
@@ -82,6 +82,23 @@ h1 {
     border-radius: 8px;
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
     outline: none;
+}
+
+.detailLabel {
+    margin-top: 24px;
+}
+
+.reservationLabel{
+    margin-bottom: 30px;
+}
+
+#reservationDetail{
+    font-size: 14px;
+    font-weight: 700;
+}
+
+#reservationDate {
+    margin-top: 30px;
 }
 
 @media (max-width: 768px) {
