--- a/src/main/resources/templates/store/customer-store-list.html
+++ b/src/main/resources/templates/store/customer-store-list.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/store/customerStoreList.js}"></script>
+    <script th:src="'//dapi.kakao.com/v2/maps/sdk.js?appkey=' + ${kakaoMapJsKey}"></script>
     <link rel="stylesheet" th:href="@{/css/store/customerStoreList.css}">
 </head>
 <body>
