--- a/src/main/resources/static/css/store/customerStoreList.css
+++ b/src/main/resources/static/css/store/customerStoreList.css
@@ -1,3 +1,11 @@
+h1 {
+    text-align: center;
+    font-size: 2.2rem;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 32px;
+}
+
 .store-container {
     display: flex;
     flex-wrap: wrap;
@@ -24,6 +32,7 @@
     border-radius: 10px;
 }
 .store-info h2 {
+    text-align: center;
     margin: 20px 0 10px;
     font-size: 1.25rem;
     color: #fd9600;
