--- a/src/main/resources/templates/store/customer-store-list.html
+++ b/src/main/resources/templates/store/customer-store-list.html
@@ -6,8 +6,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
-    <script th:src="@{/js/store/customerStoreList.js}"></script>
-    <script th:src="'//dapi.kakao.com/v2/maps/sdk.js?appkey=' + ${kakaoMapJsKey}"></script>
+    <script th:src="@{/js/layout.js}"></script>
+    <script th:src="@{/js/store/StoreCustomerList.js}"></script>
     <link rel="stylesheet" th:href="@{/css/store/customerStoreList.css}">
 </head>
 <body>
