--- a/src/main/resources/templates/store/store-register.html
+++ b/src/main/resources/templates/store/store-register.html
@@ -27,8 +27,11 @@
         <div class="form-group">
             <label for="store_name">지점 이름</label>
             <input type="text" id="store_name" placeholder="지점이름을 입력하세요" required>
-            <label for="store_name">지점 관리자</label>
-            <input type="text" id="store_manager_uid" placeholder="지점 관리자 UID를 입력하세요" required>
+            <label for="manager">지점 관리자</label>
+            <select id="manager" name="managerUid">
+                <option value="">지점 관리자를 선택하세요</option>
+                <!-- 아래 옵션들은 JS로 동적으로 채움 -->
+            </select>
         </div>
 
         <div class="form-group">
