--- a/src/main/resources/templates/menu/menuEdit.html
+++ b/src/main/resources/templates/menu/menuEdit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>메뉴 수정</title>
     <meta charset="UTF-8">
@@ -7,153 +7,145 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
-    <script src="/js/menu/menuEdit.js"></script>
-    <link href="/css/common.css" rel="stylesheet">
-    <link href="/css/menu/menuEdit.css" rel="stylesheet">
+    <script th:src="@{/js/menu/menuEdit.js}"></script>
+    <link th:href="@{/css/common.css}" rel="stylesheet">
+    <link th:href="@{/css/menu/menuEdit.css}" rel="stylesheet">
 </head>
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+
 <h1>메뉴 수정</h1>
 
-<form id="menuEditForm">
-    <input type="hidden" name="uid" value="{menu.uid}"/>
-
-    <label>메뉴 이름:</label>
-    <input type="text" name="menuName" value="{menu.menuName}"/><br>
-
-    <label>가격:</label>
-    <input type="number" name="price" value="{menu.price}"/><br>
-
-    <label>칼로리:</label>
-    <input type="number" step="0.1" name="calorie" value="{menu.calorie}"/><br>
-
-    <!-- Bread -->
-    <label>빵:</label>
-    <select name="breadId">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Bread options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <!-- Material -->
-    <label>메인 재료:</label>
-    <select name="material1Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Material options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>추가 재료 1:</label>
-    <select name="material2Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Material options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>추가 재료 2:</label>
-    <select name="material3Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Material options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <!-- Cheese -->
-    <label>치즈:</label>
-    <select name="cheeseId">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Cheese options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <!-- Vegetables -->
-    <label>채소 1:</label>
-    <select name="vegetable1Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 2:</label>
-    <select name="vegetable2Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 3:</label>
-    <select name="vegetable3Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 4:</label>
-    <select name="vegetable4Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 5:</label>
-    <select name="vegetable5Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 6:</label>
-    <select name="vegetable6Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 7:</label>
-    <select name="vegetable7Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>채소 8:</label>
-    <select name="vegetable8Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Vegetable options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <!-- Sauces -->
-    <label>소스 1:</label>
-    <select name="sauce1Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Sauce options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>소스 2:</label>
-    <select name="sauce2Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Sauce options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <label>소스 3:</label>
-    <select name="sauce3Id">
-        <option value="">-- 선택하세요 --</option>
-        <!-- Sauce options will be dynamically filled by JavaScript -->
-    </select><br>
-
-    <!-- Status -->
-    <label>상태:</label>
-    <select name="status">
-        <option value="active">ACTIVE</option>
-        <option value="deleted">DELETED</option>
-    </select><br>
+<form id="menuEditForm" onsubmit="return false;">
+    <input type="hidden" name="uid" />
 
     <div class="form-group">
-        <label>현재 이미지</label>
-        <br>
-        <img src="{menu.img}" alt="메뉴 이미지" width="100">
+        <label for="menuName">메뉴 이름:</label>
+        <input type="text" id="menuName" name="menuName" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label for="price">가격:</label>
+        <input type="number" id="price" name="price" class="form-control" />
+    </div>
+
+    <div class="form-group">
+        <label for="calorie">칼로리:</label>
+        <input type="number" step="0.1" id="calorie" name="calorie" class="form-control" />
+    </div>
+
+    <!-- Bread -->
+    <div class="form-group">
+        <label for="breadId">빵:</label>
+        <select id="breadId" name="breadId" class="form-control">
+            <option value="">-- 선택하세요 --</option>
+        </select>
+    </div>
+
+    <!-- Material -->
+    <div class="form-group">
+        <label for="material1Id">메인 재료:</label>
+        <select id="material1Id" name="material1Id" class="form-control">
+            <option value="">-- 선택하세요 --</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="material2Id">추가 재료 1:</label>
+        <select id="material2Id" name="material2Id" class="form-control">
+            <option value="">-- 선택하세요 --</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="material3Id">추가 재료 2:</label>
+        <select id="material3Id" name="material3Id" class="form-control">
+            <option value="">-- 선택하세요 --</option>
+        </select>
+    </div>
+
+    <!-- Cheese -->
+    <div class="form-group">
+        <label for="cheeseId">치즈:</label>
+        <select id="cheeseId" name="cheeseId" class="form-control">
+            <option value="">-- 선택하세요 --</option>
+        </select>
+    </div>
+
+    <!-- Vegetables -->
+    <div class="form-group">
+        <label for="vegetable1Id">채소 1:</label>
+        <select id="vegetable1Id" name="vegetable1Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable2Id">채소 2:</label>
+        <select id="vegetable2Id" name="vegetable2Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable3Id">채소 3:</label>
+        <select id="vegetable3Id" name="vegetable3Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable4Id">채소 4:</label>
+        <select id="vegetable4Id" name="vegetable4Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable5Id">채소 5:</label>
+        <select id="vegetable5Id" name="vegetable5Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable6Id">채소 6:</label>
+        <select id="vegetable6Id" name="vegetable6Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable7Id">채소 7:</label>
+        <select id="vegetable7Id" name="vegetable7Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="vegetable8Id">채소 8:</label>
+        <select id="vegetable8Id" name="vegetable8Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+
+    <!-- Sauces -->
+    <div class="form-group">
+        <label for="sauce1Id">소스 1:</label>
+        <select id="sauce1Id" name="sauce1Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="sauce2Id">소스 2:</label>
+        <select id="sauce2Id" name="sauce2Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+    <div class="form-group">
+        <label for="sauce3Id">소스 3:</label>
+        <select id="sauce3Id" name="sauce3Id" class="form-control"><option value="">-- 선택하세요 --</option></select>
+    </div>
+
+    <!-- Status -->
+    <div class="form-group">
+        <label for="status">상태:</label>
+        <select id="status" name="status" class="form-control">
+            <option value="ACTIVE">ACTIVE</option>
+            <option value="DELETED">DELETED</option>
+        </select>
+    </div>
+
+    <!-- 이미지 -->
+    <div class="form-group">
+        <label>현재 이미지</label><br>
+        <img id="currentImg" alt="메뉴 이미지" width="100" />
     </div>
 
     <div class="form-group">
         <label for="img">새 이미지 업로드</label>
-        <input type="file" id="img" name="file" accept="image/*">
-        <input type="hidden" id="imgUrl" name="img" value="{menu.img}">
+        <input type="file" id="img" name="file" accept="image/*" />
+        <input type="hidden" id="imgUrl" name="img" />
     </div>
 
     <div class="form-actions">
-        <button type="button" id="updateBtn">수정하기</button>
-        <button type="button" onclick="location.href='/menus/list'" id="goList">목록으로</button>
+        <button type="button" id="updateBtn" class="btn btn-primary">수정하기</button>
+        <button type="button" id="goList" class="btn btn-secondary" onclick="location.href='/menus/list'">목록으로</button>
     </div>
-
 </form>
+
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
