--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -2,7 +2,7 @@
 <nav class="navbar" th:fragment="nav">
     <div class="navbar-links">
         <a href="/" class="nav-link">메뉴 소개</a>
-        <a href="/side" class="nav-link">사이드</a>
+        <a href="/sidesList" class="nav-link">사이드</a>
         <a href="/" class="nav-link">가맹점</a>
 
     </div>
