--- a/src/main/resources/templates/auth/profile.html
+++ b/src/main/resources/templates/auth/profile.html
@@ -12,6 +12,7 @@
 
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
+    <script th:src="@{/js/allergyCheck.js}"></script>
     <script th:src="@{/js/auth/profile.js}"></script>
     <script th:src="@{/js/kakaoMobility.js}"></script>
     <link th:href="@{/css/common.css}" rel="stylesheet">
@@ -86,7 +87,7 @@
         </div>
         <div class="info-section">
             <div class="delivery-info">
-                <p>배달 현황 나올 예정입니다</p>
+                <p>배달 현황:</p>
                 <div>
                     <div id="map" style="width:350px;height:350px;"></div>
                 </div>
