--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -3,7 +3,7 @@
     <div class="navbar-links">
         <a href="/" class="nav-link">메뉴 소개</a>
         <a href="/side" class="nav-link">사이드</a>
-        <a href="/" class="nav-link">가맹점</a>
+        <a href="/store/customer-list" class="nav-link">가맹점</a>
 
     </div>
     <div class="management-section">
