--- a/src/main/resources/templates/store/customer-store-list.html
+++ b/src/main/resources/templates/store/customer-store-list.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>가맹점 목록 | Sand-it</title>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e0a9cdd5535d7bb018489c5662b3b5ae&autoload=false"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/store/customerStoreList.js}"></script>
-    <script th:src="'//dapi.kakao.com/v2/maps/sdk.js?appkey=' + ${kakaoMapJsKey}"></script>
+
+    <link th:href="@{/css/common.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/store/customerStoreList.css}">
+
 </head>
 <body>
+<div th:replace="~{header :: header}"></div>
+<div th:replace="~{navigation :: nav}"></div>
 <div class="main-container">
     <header>
         <!-- 네비게이션 등 기존 코드 복붙 -->
@@ -20,6 +27,6 @@
         <!-- JS로 가맹점 카드가 렌더링 됨 -->
     </div>
 </div>
-
+<div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
