--- a/src/main/resources/templates/auth/update-profile.html
+++ b/src/main/resources/templates/auth/update-profile.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/layout.js}"></script>
+    <script th:src="@{/js/allergyCheck.js}"></script>
     <script th:src="@{/js/emailVerify.js}"></script>
     <script th:src="@{/js/findAddress.js}"></script>
     <script th:src="@{/js/auth/updateProfile.js}"></script>
@@ -22,6 +24,7 @@
     </div>
 
     <div>
+        <input id="hiddenUserUId" type="hidden">
         <input id="hiddenUserId" type="hidden">
         <input id="hiddenUserName" type="hidden">
         <input id="hiddenUserRole" type="hidden">
@@ -62,12 +65,16 @@
                     <button type="button" id="mainAddress-kakao">주소 찾기</button>
                 </div>
                 <div class="map" style="display:none;"></div>
+                <!-- 히든 필드들 -->
+                <input type="hidden" id="main_postcode">
+                <input type="hidden" id="main_latitude" name="latitude">
+                <input type="hidden" id="main_longitude" name="longitude">
             </div>
-                <div class="address-detail">
-                    <label for="main_address_detail">상세주소</label>
-                    <input type="text" id="main_address_detail" placeholder="상세주소를 입력하세요">
-                </div>
-                <p class="address-guide">아파트의 경우 동, 호수까지 입력해주세요</p>
+            <div class="address-detail">
+                <label for="main_address_detail">상세주소</label>
+                <input type="text" id="main_address_detail" placeholder="상세주소를 입력하세요">
+            </div>
+            <p class="address-guide">아파트의 경우 동, 호수까지 입력해주세요</p>
 
             <div class="user-profile address-block">
                 <div class="address-header">
@@ -81,11 +88,11 @@
                 <input type="hidden" id="sub1_latitude" name="latitude">
                 <input type="hidden" id="sub1_longitude" name="longitude">
             </div>
-                <div class="address-detail">
-                    <label for="sub1_address_detail">상세주소</label>
-                    <input type="text" id="sub1_address_detail" placeholder="상세주소를 입력하세요">
-                </div>
-                <p class="address-guide">아파트의 경우 동, 호수까지 입력해주세요</p>
+            <div class="address-detail">
+                <label for="sub1_address_detail">상세주소</label>
+                <input type="text" id="sub1_address_detail" placeholder="상세주소를 입력하세요">
+            </div>
+            <p class="address-guide">아파트의 경우 동, 호수까지 입력해주세요</p>
 
             <div class="user-profile address-block">
                 <div class="address-header">
@@ -99,12 +106,36 @@
                 <input type="hidden" id="sub2_latitude" name="latitude">
                 <input type="hidden" id="sub2_longitude" name="longitude">
             </div>
-                <div class="address-detail">
-                    <label for="sub2_address_detail">상세주소</label>
-                    <input type="text" id="sub2_address_detail" placeholder="상세주소를 입력하세요">
-                </div>
-                <p class="address-guide">아파트의 경우 동, 호수까지 입력해주세요</p>
+            <div class="address-detail">
+                <label for="sub2_address_detail">상세주소</label>
+                <input type="text" id="sub2_address_detail" placeholder="상세주소를 입력하세요">
+            </div>
+            <p class="address-guide">아파트의 경우 동, 호수까지 입력해주세요</p>
 
+            <div class="form-group" id="allergy-group">
+                <label id="allergy-label">알레르기 선택</label>
+
+                <!-- 자주 선택되는 항목 -->
+                <div class="allergy-main-options">
+                    <label><input type="checkbox" name="allergy" value="우유"> 우유(유제품)</label>
+                    <label><input type="checkbox" name="allergy" value="난류"> 난류(계란)</label>
+                    <label><input type="checkbox" name="allergy" value="대두"> 대두(콩)</label>
+                    <label><input type="checkbox" name="allergy" value="땅콩"> 땅콩</label>
+                    <label><input type="checkbox" name="allergy" value="갑각류"> 갑각류</label>
+                    <label><input type="checkbox" name="allergy" value="견과류"> 견과류</label>
+                </div>
+
+                <!-- 기타 항목 보기 -->
+                <button type="button" id="toggle-allergy" class="btn-sm">기타 알레르기</button>
+
+                <div id="other-allergy-options" style="display: none; margin-top: 10px;">
+                    <label><input type="checkbox" name="allergy" value="생선"> 생선</label>
+                    <label><input type="checkbox" name="allergy" value="참깨"> 참깨</label>
+                    <label><input type="checkbox" name="allergy" value="복숭아"> 복숭아</label>
+                    <label><input type="checkbox" name="allergy" value="토마토"> 토마토</label>
+                    <label><input type="checkbox" name="allergy" value="아황산류"> 아황산류</label>
+                </div>
+            </div>
         </div>
     </div>
     <div class="group-btn">
